--- a/back/.env
+++ b/back/.env
@@ -1,2 +1,3 @@
 PORT = 8000
 BASE_API_URL = /api/v1
+MONGODB_URL =  mongodb+srv://ibnalam:yLLspPxyApPjHZW6@cluster0.cvlmlv8.mongodb.net/socialapp?retryWrites=true&w=majority
